[package]
name = "mmfplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3"
anyhow = "1.0.68"
walkdir = "2.3.2"
base16ct = { version = "0.1.1", features = ["alloc"] }
sha2 = "0.10.6"
flexi_logger = { version = "0.24.2", features = ["async"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
chrono = "0.4.23"
regex = "1.7.1"
filetime = "0.2.19"
