[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3"
anyhow = "1.0.68"
walkdir = "2.3.2"
base16ct = { version = "0.1.1", features = ["alloc"] }
sha2 = "0.10.6"
flexi_logger = { version = "0.24.2", features = ["async"] }

config = { path = "../config" }
extractor = { path = "../extractor" }
