[package]
name = "mmfplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
# anyhow = "1.0.68"
tokio = { version = "1.27.0", features = ["full"] }

utils = { path = "../utils" }
config = { path = "../config" }
place = { path = "../place" }
dupf = { path = "../dupf" }
