[package]
name = "mmfplace"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
clap = "4.5.40"
tokio = "1.46.0"

utils = { path = "../utils" }
config = { path = "../config" }
place = { path = "../place" }
