[package]
name = "place"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
config = { path = "../config" }

clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
futures = "0.3"
anyhow = "1.0.68"
walkdir = "2.3.2"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.31"
filetime = "0.2.19"
regex = "1.7.1"