[package]
name = "place"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
config = { path = "../config" }
tools = { path = "../tools" }
dateparser = { path = "../dateparser" }

clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
futures = "0.3.31"
anyhow = "1.0.98"
walkdir = "2.5.0"
tokio = { version = "1.46.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
# filetime = "0.2.25"
regex = "1.11.1"
once_cell = "1.21.3"
tracing = "0.1.41"
tracing-futures = "0.2.5"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde_json = "1.0.140"
