[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
log = "0.4.17"
base16ct = { version = "0.1.1", features = ["alloc"] }
sha2 = "0.10.6"
tokio = { version = "1.27.0", features = ["full"] }
walkdir = "2.3.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }


