[package]
name = "utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
base16ct = { version = "0.2.0", features = ["alloc"] }
tokio = { version = "1.46.0", features = ["full"] }
walkdir = "2.5.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
sha2 = "0.10.9"
md-5 = "0.10.6"
digest = "0.10.7"
